# aoc2022

./: .gitignore  Cargo.toml  LICENSE  default.nix  flake.nix
inputs/day5/: input.1.txt
