[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day1/bin/main.rs"

[[bin]]
name = "day2"
path = "src/day2/bin/main.rs"

[[bin]]
name = "day3"
path = "src/day3/bin/main.rs"

[[bin]]
name = "day4"
path = "src/day4/bin/main.rs"

[[bin]]
name = "day5"
path = "src/day5/bin/main.rs"

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
nom = "7"
